Revert "feat: DefaultWorkRuleControllerにGET/{id}とPUT/{id}エンドポイントを追加"
This reverts commit f6cceb0331d6ec9ecea4aa5c6e1b521e1dddc8b9.
